# MockMarketDjango

./: db.sqlite3  pyproject.toml
MockMarket/: apps.py  site.html
mysite/: settings.py  urls.py  views.py
templates/: index.html
