[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
pandas-datareader = "^0.9.0"
plotly = "^4.14.3"
pandas = "^1.2.3"
[tool.poetry.dev-dependencies]
